# Aegisub

./: Makefile  Makefile.am  Makefile.inc.in  Makefile.target  configure.in  subtitles_rasterizer.h
aegisub/: Makefile.am  VideoSink.cpp  audio_box.cpp  audio_display.cpp  dialog_about.cpp  dialog_options.cpp  dialog_properties.cpp  dialog_resample.cpp  frame_main.cpp  frame_main.h  frame_main_events.cpp  main.cpp  options.cpp  setup.cpp  stdwx.h  subs_grid.cpp  subtitle_format_prs.cpp  subtitles_provider.cpp  subtitles_provider.h  subtitles_provider_csri.cpp  subtitles_provider_csri.h  utils.h  video_box.cpp  video_context.cpp  video_context.h  video_display.cpp  video_display.h  video_display_visual.cpp  video_display_visual.h  video_frame.cpp  video_frame.h  video_provider.cpp  video_provider.h  video_provider_avs.cpp  video_provider_avs.h  video_provider_dshow.cpp  video_provider_dshow.h  video_slider.cpp
automation/: Makefile  Makefile.am
core/: ass_dialogue.cpp  ass_export_filter.h  ass_file.cpp  ass_file.h  ass_override.cpp  audio_display.cpp  auto4-status.txt  auto4_base.cpp  auto4_base.h  auto4_lua.cpp  auto4_lua.h  auto4_lua_dialog.cpp  base_grid.cpp  base_grid.h  dialog_automation.cpp  dialog_export.cpp  dialog_fextracker.cpp  dialog_properties.cpp  dialog_resample.cpp  dialog_search_replace.cpp  dialog_shift_times.cpp  dialog_style_editor.cpp  dialog_style_manager.cpp  (+17 more)
tests/: Makefile.am  libaegisub_access.cpp  libaegisub_cajun.cpp  libaegisub_mru.cpp  libaegisub_path.cpp  libaegisub_signals.cpp  libaegisub_util.cpp  main.cpp  main.h  setup.sh  util.h
(+270 files in other folders)
